test class moved to test direcory